# friendly-octo-guide

./: .gitignore  Directory.Build.props  README.md  docker-compose.yml  dump.rdb  plataforma-linha.slnx
.github/workflows/: _dotnet-service.yml  agents.yml  ai-router.yml  ai-worker-embeddings.yml  ai-worker-llm.yml  ai-worker-vision.yml  chatbot.yml  contracts.yml  core-execution.yml  data-archiver.yml  decision-engine.yml  docs-pages.yml  edge-protocol-gateway.yml  gateway.yml  identity.yml  integration.yml  k6-smoke.yml  knowledge.yml  mes-connector.yml  notifications.yml  obs-client.yml  platform.yml  predictive.yml  pwa.yml  sast.yml  telemetry-ingest.yml
clients/: README.md
clients/desktop/: README.md
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/mobile/: README.md
clients/observability/: README.md
clients/observability/src-tauri/: Cargo.toml  tauri.conf.json
clients/observability/src-tauri/src/: lib.rs  main.rs
clients/pwa/: README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
deploy/: namespaces.yaml
deploy/ai-router/: deployment.yaml
docs/: arquitetura.md  estado-da-arquitetura.html  estado-execucao-smt.md  idmss-victor.md  mapa-implementacao.md  plano-execucao-propostas-smt.md  prontidao-producao-industrial.md  prontidao-propostas-smt.md
schemas/: ai-job.avsc  ativo.avsc  auditoria-admin.avsc  causa-raiz.avsc  comando-proposto.avsc  core-evento.avsc  decisao-auditada.avsc  linha-alerta.avsc  mes-evento.avsc  parada-linha.avsc  sensor-reading.avsc
(+344 files in other folders)
