[package]
name = "plataforma-linha-desktop"
version = "0.1.0"
description = "Shell desktop (Tauri) do core web da plataforma-linha — mesmo bundle do PWA."
edition = "2021"
rust-version = "1.77"

[lib]
name = "plataforma_linha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "plataforma-linha-desktop"
path = "src/main.rs"
