[package]
name = "plataforma-linha-obs"
version = "0.1.0"
description = "Shell nativo (Tauri) do dashboard de observabilidade — Grafana embutido, push nativo, cache offline, desbloqueio TOTP local."
edition = "2021"
rust-version = "1.77"

[lib]
name = "plataforma_linha_obs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "plataforma-linha-obs"
path = "src/main.rs"
